Proyecto terminado con carrito de compras

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -44,6 +44,10 @@ accion.actualizar=Update
 accion.guardar=Save
 accion.regresar=Return
 
+carrito.regresar=Continue shopping
+carrito.carrito=Shopping cart
+carrito.cantidadArticulos=items in your cart
+carrito.resumen=Purchase summary
 
 login.username=Usuario
 login.password=Contrase\u00f1a
@@ -56,3 +60,18 @@ plantilla.tusuario=Usuario
 plantilla.troles=Roles
 plantilla.logout=Salir
 plantilla.admin=Admin
+plantilla.tusuario=Usuario
+plantilla.troles=Roles
+plantilla.usuarios=Usuarios
+plantilla.bienvenido=Usuario
+plantilla.titulo=Su tienda en l\u00ednea
+cliente.limiteTotal=L\u00edmite Total
+cliente.totalClientes=Total de clientes
+articulo.inventario=Inventario Total
+articulo.totalArticulos=Total de Art\u00edculos
+categoria.totalCategorias=Total de Categorias
+
+carrito.regresar=Continuar comprando
+carrito.carrito=Carrito de compras
+carrito.cantidadArticulos=articulos en el carrito
+carrito.resumen=Resumen de la compra
