--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -37,6 +37,11 @@ categoria.descripcion=Descripci\u00f3n
 categoria.activo=Activa
 categoria.no_mostrar=No tenemos categor\u00edas que mostrar
 
+carrito.regresar=Continuar comprando
+carrito.carrito=Carrito de compras
+carrito.cantidadArticulos=articulos en el carrito
+carrito.resumen=Resumen de la compra
+
 accion.agregar=Agregar
 accion.nuevo=Nuevo
 accion.eliminar=Eliminar
@@ -55,3 +60,13 @@ plantilla.tusuario=Usuario
 plantilla.troles=Roles
 plantilla.logout=Salir
 plantilla.admin=Admin
+plantilla.tusuario=Usuario
+plantilla.troles=Roles
+plantilla.usuarios=Usuarios
+plantilla.bienvenido=Usuario
+plantilla.titulo=Su tienda en l\u00ednea
+cliente.limiteTotal=L\u00edmite Total
+cliente.totalClientes=Total de clientes
+articulo.inventario=Inventario Total
+articulo.totalArticulos=Total de Art\u00edculos
+categoria.totalCategorias=Total de Categorias
